--- a/static/components/pitch/pitch.html
+++ b/static/components/pitch/pitch.html
@@ -1,24 +1,50 @@
-<div class="pitch" style="position: relative">
-  <img :src="pitchSrc" alt="" />
-  <div v-if="formation">
-    <template v-for="[key,pos] in Object.entries(formation)">
-      <q-btn
-        :style="`position: absolute;left: ${pos.x}%; top: ${pos.y}%; transform: translate(-50%);`"
-        outline
-        round
-        color="primary"
-        icon="person_add"
-      >
-        <q-menu auto-close>
-          <q-list>
-            <q-item clickable v-for="player in team" :key="player.id">
-              <q-item-section
-                ><span v-text="player.name"></span
-              ></q-item-section>
-            </q-item>
-          </q-list>
-        </q-menu>
-      </q-btn>
-    </template>
+<div>
+  <div class="pitch">
+    <div class="pitch-top">
+      <div class="pitch-row">
+        <template v-for="(p, i) in forwards">
+          <pitch-player
+            :pos="'offence'"
+            :player="p"
+            :filtered-positions="filteredPositions"
+            @add-player="addPlayer"
+            :index="i"
+          ></pitch-player>
+        </template>
+      </div>
+      <div class="pitch-row">
+        <template v-for="(p, i) in midfielders">
+          <pitch-player
+            :pos="'midfield'"
+            :player="p"
+            :filtered-positions="filteredPositions"
+            @add-player="addPlayer"
+            :index="i"
+          ></pitch-player>
+        </template>
+      </div>
+      <div class="pitch-row">
+        <template v-for="(p, i) in defenders">
+          <pitch-player
+            :pos="'defence'"
+            :player="p"
+            :filtered-positions="filteredPositions"
+            @add-player="addPlayer"
+            :index="i"
+          ></pitch-player>
+        </template>
+      </div>
+      <div class="pitch-row">
+        <template v-for="(p, i) in goalkeepers">
+          <pitch-player
+            :pos="'goalkeeper'"
+            :player="p"
+            :filtered-positions="filteredPositions"
+            @add-player="addPlayer"
+            :index="i"
+          ></pitch-player>
+        </template>
+      </div>
+    </div>
   </div>
 </div>
