--- a/templates/fantasyleague/competition.html
+++ b/templates/fantasyleague/competition.html
@@ -4,12 +4,13 @@
   <div class="col-12 q-gutter-y-md">
     <q-card>
       <q-card-section>
-        <div class="row items-center">
-          <h5 class="col">Fantasy League</h5>
+        <div class="text-center">
+          <h5>Fantasy League</h5>
+          <div v-if="!hasTeam">Choose your team...</div>
         </div>
       </q-card-section>
-      <q-card-section class="row q-col-gutter-md">
-        <div class="col-12 col-md-6">
+      <q-card-section class="row flex-center q-col-gutter-md">
+        <div v-if="hasTeam" class="col-md-12 col-6">
           <q-select
             filled
             dense
@@ -18,8 +19,13 @@
             label="Formation"
           ></q-select>
           <div class="q-mt-md">
-            <q-list bordered v-if="team.length">
-              <q-item clickable v-ripple v-for="player in team">
+            <q-list bordered>
+              <q-item
+                clickable
+                v-ripple
+                v-for="player in team"
+                :key="player.id"
+              >
                 <q-item-section
                   ><span v-text="player.name"></span
                 ></q-item-section>
@@ -28,20 +34,20 @@
                 </q-item-section>
               </q-item>
             </q-list>
-            <div v-else class="flex flex-center q-mt-xl">
-              Choose your team...
-            </div>
           </div>
         </div>
-        <div class="col-12 col-md-6">
+        <div :class="hasTeam ? 'col-md-12 col-6':'col-12'">
           <pitch
             :pitch-src="pitchSrc"
             :team="team"
-            :formation="selectedFormation"
+            :formation="formation"
+            :players="players"
+            :has-team="hasTeam"
+            @add-player="addToTeam"
           ></pitch>
           <q-btn
             color="primary"
-            label="Save"
+            :label="hasTeam ? 'Update Team' : 'Save Team'"
             @click="saveTeam"
             :disable="team.length < 14"
             class="q-mt-md"
@@ -108,6 +114,7 @@
 <script src="{{ url_for('fantasyleague_static', path='js/tactics.js') }}"></script>
 
 <script src="{{ url_for('fantasyleague_static', path='components/pitch/pitch.js') }}"></script>
+<script src="{{ url_for('fantasyleague_static', path='components/pitch-player/pitch-player.js') }}"></script>
 
 <script src="{{ url_for('fantasyleague_static', path='js/competition.js') }}"></script>
 
@@ -116,12 +123,91 @@
     position: relative;
     width: 100%;
     height: 540px;
-    background: #2e7d32;
-    box-shadow: 0 3px 6px 1px rgba(0, 0, 0, 0.06);
-    perspective: 800px;
+    background: linear-gradient(
+      to bottom,
+      rgba(46, 125, 50, 1) 5%,
+      rgba(46, 125, 50, 0.5) 100%
+    );
+    /* background: #2e7d32; */
+    /* box-shadow: 0 3px 6px 1px rgba(0, 0, 0, 0.06);
+    perspective: 800px; */
     overflow: hidden;
   }
-  .pitch > img {
+  .pitch-top {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    padding-top: 10px;
+    position: relative;
+    height: inherit;
+  }
+  .pitch-top::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    background-image: url("{{ url_for('fantasyleague_static', path='images/pitch.svg') }}");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: transparent;
+    background-position: top;
+    min-height: 442px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 1152px;
+    height: 500px;
+    pointer-events: none;
+    /*
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url("{{ url_for('fantasyleague_static', path='images/pitch.svg') }}");
+    */
+  }
+  .pitch-row {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    position: relative;
+    display: flex;
+    min-height: 82px;
+  }
+  .pitch-player {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 88px;
+    min-height: 90px;
+    margin-right: 10px;
+  }
+  .pitch-player:last-child {
+    margin-right: 0;
+  }
+  .pitch-player--wrapper {
+    display: block;
+    width: inherit;
+    position: relative;
+    margin: 0 auto;
+  }
+  .pitch-player--pos {
+    background: var(--q-color-dark);
+    border-radius: 4px;
+    display: flex;
+    font-size: 10px;
+    line-height: 1.1;
+    margin: -6px auto 0 auto;
+    margin-top: -6px;
+    position: relative;
+    padding: 3px 15px;
+    justify-content: center;
+    align-items: center;
+  }
+  /* .pitch > img {
     position: absolute;
     display: block;
     transform-origin: bottom center;
@@ -132,14 +218,14 @@
     width: 90%;
     height: 76%;
     user-select: none;
-  }
-  .pitch > div {
+  } */
+  /* .pitch > div {
     height: 100%;
     background: linear-gradient(
       to bottom,
       rgba(255, 255, 255, 0.2) 5%,
       rgba(255, 255, 255, 0) 100%
     );
-  }
+  } */
 </style>
 {% endblock %}
