--- a/templates/fantasyleague/index.html
+++ b/templates/fantasyleague/index.html
@@ -19,11 +19,25 @@
         <div class="col-12">
           <h6>Available Competitions</h6>
         </div>
-        <div class="q-pa-md row items-start q-gutter-md">
-          <q-card v-for="c in competitions" :key="c.id">
+        <div
+          class="q-pa-md items-start q-gutter-md"
+          style="
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            grid-auto-rows: auto;
+          "
+        >
+          <q-card class="full-height" v-for="c in competitions" :key="c.id">
             <img
+              basic
               :src="c.competition_logo"
-              style="background-color: white; padding: 1rem"
+              style="
+                background-color: white;
+                padding: 1rem;
+                max-height: 60%;
+                width: auto;
+                margin: 0 auto;
+              "
             />
 
             <q-card-section>
