--- a/static/components/settings/settings.html
+++ b/static/components/settings/settings.html
@@ -8,7 +8,7 @@
           style="width: 350px"
           filled
           dense
-          v-model.trim="api_key"
+          v-model.trim="footballdata_api_key"
           label="API Key"
           hint="api-football.com API key"
         >
