--- a/templates/fantasyleague/admin.html
+++ b/templates/fantasyleague/admin.html
@@ -21,7 +21,7 @@
           </div>
           <div>
             <settings
-              :api_key="api_key"
+              :apikey="api_key"
               @save-settings="saveSettings"
             ></settings>
           </div>
