--- a/templates/fantasyleague/competition.html
+++ b/templates/fantasyleague/competition.html
@@ -20,13 +20,21 @@
                 v-for="player in eleven"
                 :key="player.id"
               >
-                <q-item-section>
-                  <span v-text="player.name"></span>
-                </q-item-section>
-                <q-item-section avatar>
+                <q-item-section top avatar>
                   <q-avatar round>
                     <img :src="player.photo" />
                   </q-avatar>
+                </q-item-section>
+                <q-item-section>
+                  <q-item-label
+                    ><span v-text="player.name"></span
+                  ></q-item-label>
+                  <q-item-label caption
+                    ><span v-text="player.position"></span
+                  ></q-item-label>
+                </q-item-section>
+                <q-item-section side top>
+                  <q-badge :label="player.points"></q-badge>
                 </q-item-section>
               </q-item>
               <q-separator></q-separator>
@@ -37,13 +45,21 @@
                 v-for="player in subs"
                 :key="player.id"
               >
-                <q-item-section>
-                  <span v-text="player.name"></span>
-                </q-item-section>
-                <q-item-section avatar>
+                <q-item-section top avatar>
                   <q-avatar round>
                     <img :src="player.photo" />
                   </q-avatar>
+                </q-item-section>
+                <q-item-section>
+                  <q-item-label
+                    ><span v-text="player.name"></span
+                  ></q-item-label>
+                  <q-item-label caption
+                    ><span v-text="player.position"></span
+                  ></q-item-label>
+                </q-item-section>
+                <q-item-section side top>
+                  <q-badge :label="player.points"></q-badge>
                 </q-item-section>
               </q-item>
             </q-list>
@@ -53,29 +69,11 @@
           :class="state.hasTeam ? 'col-12 col-lg-6':'col-12'"
           class="pitch-wrapper"
         >
-          <!-- <q-select
-            filled
-            v-model="formation"
-            :options="formations"
-            emit-value
-            label="Formation"
-            class="q-mb-md"
-            @input="handleFormationChange"
-          ></q-select> -->
           <pitch
             @add-player="addToTeam"
             @update-lineup="updateLineUp"
             :team="state.team"
           ></pitch>
-          <!-- <pitch
-            :team="state.team"
-            :formation="state.formation"
-            :lineup="state.lineUp"
-            :players="state.players"
-            :has-team="state.hasTeam"
-            @add-player="addToTeam"
-            @update-lineup="updateLineUp"
-          ></pitch> -->
           <div>
             <q-btn
               v-if="!state.hasTeam"
@@ -173,9 +171,8 @@
 <style scoped>
   .pitch-wrapper {
     display: block;
-    
   }
-  
+
   .pitch {
     position: relative;
     width: 100%;
@@ -263,13 +260,13 @@
   @media (min-width: 600px) {
     .pitch-wrapper {
       display: grid;
-    grid-template-rows: auto 1fr auto;
-    align-self: stretch;
+      grid-template-rows: auto 1fr auto;
+      align-self: stretch;
     }
     .pitch-player {
-    width: 88px;
-    margin-right: 10px;
-  }
+      width: 88px;
+      margin-right: 10px;
+    }
   }
 </style>
 {% endblock %}
